--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     font-family: 'poppings', sans-serif;
     box-sizing: border-box;
 }
+html{
+    scroll-behavior: smooth;
+}
 body{
     background: #080808;
     color: #fff;
@@ -11,7 +14,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(phot.jpg);
+    background-image: url(photo.jpg);
     background-size: cover;
     background-position: center;
 }
@@ -319,7 +322,77 @@ form .submit-btn{
 
 
 /* ---------css for small screen----- */
-@media only screen and (max-width: 600px){
-    #header
 
+nav .fa-solid{
+    display: none;
+}
+
+@media only screen and (max-width: 600px){
+    #header{
+    background-image: url(phone1.jpg);
+    }
+    .header-text{
+        /* margin-top: 100%; */
+        font-size: 16px;
+        margin-top: 40%;
+    }
+    .header-text h1{
+        font-size: 28px;
+        margin-top: 1%;
+        }
+    nav .fa-solid{
+        display: none;
+    }
+    nav .fa-solid{
+        display: block;
+        font-size: 25px;
+    }
+    nav ul{
+        background: #ff004f;
+        position: fixed;
+        top: 0;
+        right: -200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition: right 0.5s;
+    }
+    nav ul li{
+        display: block;
+        margin: 25px;
+    }
+    nav ul .fa-solid{
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
+    }
+    .subtitle{
+        font-size: 40px;
+    }
+    .about-col-1,.about-col-2{
+        flex-basis: 100%;
+    }
+    .about-col-1{
+        margin-bottom: 30px;
+    }
+    .about-col-2{
+        font-size: 14px;
+    }
+    .contact-left, .contact-right{
+        flex-basis: 100%;
+    }
+    .copyright{
+        font-size: 14px;
+    }
+    
+
+
+}
+#msg{
+    color: #61b752;
+    margin-top: -30px;
+    display: block;
+    text-align: center;
 }
